fix bid value calculation
